2007-12-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/lineage.py: moved to new quick view format
	* src/docgen/TextBufDoc.py: fixed transient window issue

2007-12-21 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditEventRef.py: swap around delete/share buttons, bug #1477

2007-12-21 Gary Burton <gary.burton@zen.co.uk>
	* src/ScratchPad.py: allow items to be moved, feature #1465

2007-12-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_PersonView.py: pass create_quickreport uistate
	* src/Editors/_EditPrimary.py: pass create_quickreport uistate
	* src/plugins/all_events.py: use SimpleTable
	* src/plugins/siblings.py: use SimpleTable
	* src/QuickReports.py: pass create_quickreport uistate
	* src/Simple/_SimpleTable.py: Handles raw objects, click/doubleclick
	* src/PageView.py: pass create_quickreport uistate
	* src/docgen/TextBufDoc.py: need to make a managed window, transient

2007-12-20  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Misc improvements.

2007-12-20  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/siblings.py: Quick Reports under construction...
	* src/Simple/_SimpleDoc.py: added table style defaults
	* src/Simple/__init__.py: added SimpleTable
	* src/BaseDoc.py: added doc.type = "standard"
	* src/docgen/TextBufDoc.py: added doc.type = "gtk"
	* src/Simple/_SimpleTable.py: new file defining table

2007-12-20 Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: date keybindings, issue #1453

2007-12-20 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/rel_pt.py: RelLib -> gen.lib

2007-12-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPrimary.py:
	* src/Editors/_EditPlace.py:
	* src/Editors/_EditSecondary.py:
	* src/Editors/_EditSourceRef.py:
	* src/Editors/_EditReference.py:
	* src/Editors/_EditRepoRef.py:
	* src/Editors/_EditNote.py:
	* src/Editors/_EditMediaRef.py: